testsuite/tests/polykinds/T8132.stderr

T8132.hs:6:10: error:
    Class ‘Typeable’ does not support user-specified instances
